--- a/main.html
+++ b/main.html
@@ -23,6 +23,8 @@
         lon = data.lon;
         $('#city').html(city);
         $('#country').html(country);
+        return lat;
+        return lon;
       });
 
         //get Darksky API data
