--- a/main.html
+++ b/main.html
@@ -23,22 +23,24 @@
         
           // get local weather data
           function getWeatherData(lat, lon) {
+            //lat and lon are "undefined" in this function.  Why?
             var apiKey = "7b3519746f900ef3c719c52691caf255";
             var exclude = "?exclude=minutely,hourly,daily,alerts,flags";
             var unit ="?units=si";
-            // this is putting lat & lon in as undefined even though they are defined above ???
             var url = "https://api.darksky.net/forecast/" + apiKey + "/" + lat + "," + lon + exclude + unit; 
-
+                
             $.ajax({
               url: url,
               dataType: "jsonp",
               success: function(weatherData) {
                 $('#currentWeather').text(weatherData.currently.summary)
                 $('#currentTemp').val(weatherData.currently.temperature);
+                //console.log(url);  // lat & lon are undefined within the url.
               }
             });
           }
         getWeatherData();
+        //console.log(lat);  //lat is defined!
       });
     </script>
 
