--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
         
           // get local weather data
           function getWeatherData(lat, lon) {
-            var apiKey = "7b3519746f900ef3c719c52691caf255";
+            var apiKey = "xxxx";
             var exclude = "?exclude=minutely,hourly,daily,alerts,flags";
             var unit ="?units=si";
             var url = "https://api.darksky.net/forecast/" + apiKey + "/" + lat + "," + lon + exclude + unit; 
