--- a/main.html
+++ b/main.html
@@ -66,7 +66,7 @@
                 // convert temperature
                 $('#convertTemp').on('click',function(event){
                   if ('#dailyWeather'.text = dailySumInC) {
-                    $('#dailyWeather').text(weatherData.daily.summary);
+                    $('#dailyWeather').text(s);
                   } else {
                     $('#dailyWeather').text = dailySumInC;
                   };
