--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
         var lon = data.lon;
 
           function getWeatherData(lat, lon) {
-            var apiKey = "7b3519746f900ef3c719c52691caf255";
+            var apiKey = "YOURAPIKEY";
             var exclude = "?exclude=minutely,hourly,daily,alerts,flags";
             var unit ="?units=si";
             var url = "https://api.darksky.net/forecast/" + apiKey + "/" + lat + "," + lon;
